# asciidoctor-rs

./: .gitignore  Cargo.toml  Justfile  README.md  claude.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: alternate-table-delimiters-demo.adoc  block-id-demo.adoc  callout-demo.adoc  captioned-titles-demo.adoc  comments-demo.adoc  delimited-blank-line-trimming-demo.adoc  delimited-variable-delimiters-demo.adoc  fenced-code-blocks-demo-syntect.adoc  fenced-code-blocks-demo.adoc  icon-demo.adoc  literal-demo.adoc  literal-listing-masquerade-demo.adoc  multiline-attribute-demo.adoc  open-block-demo.adoc  open-block-masquerade-demo.adoc  paragraph-masquerade-demo.adoc  quote-verse-demo.adoc  resolved-style-semantics-demo.adoc  sample.adoc  source-demo.adoc  stacked-block-attribute-lists-demo.adoc  stem-blocks-demo.adoc  subscript-superscript-demo.adoc  table-include-data-demo.adoc  table-include-data-demo.csv  table-include-data-demo.tsv  titles-and-counters-demo.adoc  toc-demo.adoc
examples/include-demo/: chapter1.adoc  chapter2.adoc  index.adoc
examples/include-demo/shared/: note.adoc
scripts/: install-wasm-bindgen.mjs  install-wasm-bindgen.ps1  run-tck-full.mjs  run-tck-smoke.mjs  run-tck-smoke.ps1  sync-preview-assets.mjs  tck-adapter.cmd  tck-adapter.mjs
src/: ast.rs  inline.rs  lib.rs  main.rs  node.rs  normalize.rs  parser.rs  prepare.rs  preprocessor.rs  python.rs  render.rs  tck.rs  wasm.rs
tests/: browser_exports.rs
tests/browser/: browser.spec.js  build-wasm.mjs  preview.mjs  server.mjs
tests/browser/site/: app.js  index.html
tests/fixtures/: copilot-temp-csv.adoc  copilot-temp-data.csv  copilot-temp-data.tsv  copilot-temp-tsv.adoc
tests/node/: smoke.cjs
tests/python/: test_render.py
tests/tck-smoke/block/admonition/: delimited-style-input.adoc  delimited-style-output.json  paragraph-prefix-output.json  paragraph-style-input.adoc  paragraph-style-output.json
tests/tck-smoke/block/document/: header-body-input.adoc  header-body-output.json  implicit-metadata-input.adoc  implicit-metadata-output.json  implicit-multiple-authors-input.adoc  implicit-multiple-authors-output.json
tests/tck-smoke/block/example/: simple-paragraph-input.adoc  simple-paragraph-output.json
tests/tck-smoke/block/list/ordered/: single-item-input.adoc  single-item-output.json
tests/tck-smoke/block/listing/: title-and-attributes-input.adoc  title-and-attributes-output.json
