[package]
name = "asciidoctor-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of the Asciidoctor processor"
license = "MIT"

[lib]
name = "asciidoctor_rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.28.3", optional = true, features = ["extension-module"] }

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
