[package]
name = "asciidoctor-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of the Asciidoctor processor"
license = "MIT"
build = "build.rs"

[lib]
name = "asciidoctor_rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
python = ["dep:pyo3"]
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
csv = "1.3"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.28.3", optional = true, features = ["extension-module"] }
napi = { version = "3.8.3", optional = true }
napi-derive = { version = "3.5.2", optional = true }

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"

[build-dependencies]
napi-build = "2.3.1"
